fixed contact image spacing, linkedin still not displaying

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -6,3 +6,8 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
 }
+
+.contact-link {
+    padding: .5rem;
+    margin: .5rem;
+}
